[package]
name = "wordtop"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroemeke/wordtop"
description = "Counts words in stream and update while processing input."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
lto = true

[dependencies]
clap = "2.33.3"
ctrlc = "3.2.1"

